--- a/documentation/TODO.txt
+++ b/documentation/TODO.txt
@@ -78,17 +78,14 @@ Graphics Work:
 
 Current tasks:
     - Add Obsidian Tileset
-        - Apply to spirit world tile mappings for building/cliff exteriors
+        - Apply to spirit world tile mappings for building/cliffC exteriors
         - Touch up spirit world to fix anything that looks bad.
-
-    - Fix transitioning north when being pushed south by bead flows.
 
     - Fix bug: possible to defeat frost beast without getting reward somehow
         - Jun did this by firing fire arrows from the bottom of the screen.
             - The door opened but he didn't get the reward, and the boss respawned on returning.
 
-    - hitting cracked pots diagonally
-
+    - hitting cracked pots diagonal
     - Cloak element is lost when changing areas but you stay invisible. This should be consistent.
     - "Looks like BK Mode to Me" message with full item set and no progress in forge yet.
     - Come up with a method for generating enemy patterns in generated areas.
