--- a/documentation/TODO.txt
+++ b/documentation/TODO.txt
@@ -38,16 +38,18 @@ Graphics:
     Add damage effect for player hurt? (alttp doesn't have anything like this)
 
 Cannot reproduce:
+    - Fix bug: possible to defeat frost beast without getting reward somehow
+        - Jun did this by firing fire arrows from the bottom of the screen.
+            - The door opened but he didn't get the reward, and the boss respawned on returning.
     - Robot stopped moving in ST basement. Maybe ice damage against shield is broken?
     - If controlled clones despawns during quick clone toss, sometimes you'll take control of the original clone in an invalid position, such as inside a solid object or cliff face.
         - Possibly fixed by other changes.
 
 Graphics Work:
     High Priority Graphics:
-        Torch/Fire Pit + Camp Fire
         Ent Enemy
             Growing Thorns attack
-            Shooting Thorns attack
+            Shooting spikes attack (puff up and "explode" a ring or arc of thorns)
 
     Create icons for new items:
         Magic Beans
@@ -77,13 +79,9 @@ Graphics Work:
 
 
 Current tasks:
-    - Add Obsidian Tileset
-        - Apply to spirit world tile mappings for building/cliffC exteriors
-        - Touch up spirit world to fix anything that looks bad.
+    - Fix: Make forge shortcut lead to the front room instead of the back for easier access.
 
-    - Fix bug: possible to defeat frost beast without getting reward somehow
-        - Jun did this by firing fire arrows from the bottom of the screen.
-            - The door opened but he didn't get the reward, and the boss respawned on returning.
+    - Add Obsidian Tileset manually to buildings in the spirit world.
 
     - hitting cracked pots diagonal
     - Cloak element is lost when changing areas but you stay invisible. This should be consistent.
