WIP: Orb boss, staff tower exterior.

--- a/documentation/TODO.txt
+++ b/documentation/TODO.txt
@@ -95,8 +95,8 @@ RangeError: Maximum call stack size exceeded
 
 
 Current tasks:
+    - Fix player appears incorrectly when moving up in the elevator.
     - Add prologue sequence with placeholder graphics from Hillary.
-
 
     - Implement new Staff Tower design
         - Change status of elevator when the mid boss is defeated.
@@ -106,10 +106,7 @@ Current tasks:
         - Roof
         - New floating electric orb enemy
             - Creates lightning bolt + radial shockwave attack in alternate world during blast.
-        - New splitting stationary electric orb mid boss
-            - 3 orbs are absorbing power in the basement.
-            - Same orbs that appear during the boss fight.
-            - Split into 4 orbs when defeated.
+        - Finish mid boss
         - Update boss
             - Add giant orbs to spirit world during boss fight that generate storm clouds and prevent damaging the cloud around the heart.
                 - Player must use stone terminal to teleport to the spirit world to destroy the orbs then return.
@@ -122,8 +119,6 @@ Current tasks:
                 - At 2/3 and 1/3 life the heart enrages activating 1 then 2 orbs in the spirit world.
                     - The player must teleport to the spirit world to clear the cloud.
                     - The beast can attack the player with lightning bolts while they are in the spirit world, if it is not regenerating.
-        - New pit tile behaviors, mix between pits+southern walls.
-            - Behave like pit normally, but when the player is falling, causes the player to ease down and possibly delay the animation.
         - Improve elevator fall sequence:
             - Make elevator platfrom glow so we can see it fall in the basement ahead of the player.
             - Start it off screen
