--- a/documentation/TODO.txt
+++ b/documentation/TODO.txt
@@ -95,19 +95,15 @@ RangeError: Maximum call stack size exceeded
 
 
 Current tasks:
-    - Fix player appears incorrectly when moving up in the elevator.
     - Add prologue sequence with placeholder graphics from Hillary.
 
-    - Implement new Staff Tower design
-        - Change status of elevator when the mid boss is defeated.
-        - Don't reveal basement ladder until midboss is defeated.
-        - Add elevator behaviors
-            - off, terminals are not animated/functional
-        - Roof
-        - New floating electric orb enemy
-            - Creates lightning bolt + radial shockwave attack in alternate world during blast.
-        - Finish mid boss
+    - Release blockers:
+        - Staff tower should block projectiles
+            - add x/y coords to projectile behaviors checks
+
+    - Higher priority stretch goals
         - Update boss
+            - New roof design
             - Add giant orbs to spirit world during boss fight that generate storm clouds and prevent damaging the cloud around the heart.
                 - Player must use stone terminal to teleport to the spirit world to destroy the orbs then return.
                 - When the heart enrages, it summons new orbs in the material world to protect it and the beast guards the terminal
@@ -119,12 +115,34 @@ Current tasks:
                 - At 2/3 and 1/3 life the heart enrages activating 1 then 2 orbs in the spirit world.
                     - The player must teleport to the spirit world to clear the cloud.
                     - The beast can attack the player with lightning bolts while they are in the spirit world, if it is not regenerating.
+        - Orb enemies create lightning bolt + radial shockwave attack in alternate world during blast.
+        - Cosmetic: hero appears on top of doorframe whene exiting
+            Remove the "doorTop" as a separate component.
+            If the hero is using the door, set the door as the renderParent, and then render the door top after them.
+        - Improve midboss:
+            - Do something more aggressive during pinch phase
+                - Growing AoE lightning ring
+                - Shock arcs centered on player every 1s
+                - Make sure player can knock the orb away with attacks
+                    - Accelerate towards the player faster requiring knockback or fast speed to escape
+
+    - Low priority Staff Tower Exterior
+        - Cosmetic: shadow is hidden by tower balcony
+            - Possible fix: make hero a renderChild of the balcony when the hero is standing on it.
+        - Update all tower exteriors. Replace screen terminal with stone tablet terminal.
+        - Add tower setup behavior to the stone tablet instead of using the staff.
+        - Improve tower visuals
+            - Try rendering the top of the tower at ground level using a transparent filter near the top:
+            - Do not render the top ~40 pixels of the tower at all.
+            - Render the cloud using a solid -> transparent gradient over the top 40 pixels so the cloud fades out
+
+    - Low priority Staff Tower changes
+        - Add elevator behaviors
+            - off, terminals are not animated/functional
         - Improve elevator fall sequence:
             - Make elevator platfrom glow so we can see it fall in the basement ahead of the player.
             - Start it off screen
             - Delay the fall of the player until the platform crashes.
-
-    - Lower priority futuristic graphics
         - Reuse future ceiling edges for ledge tiles on the floor2 layer.
         - New stairs object
             - Like the escalator style with rails except no moving floor.
