--- a/documentation/TODO.txt
+++ b/documentation/TODO.txt
@@ -97,6 +97,8 @@ RangeError: Maximum call stack size exceeded
 Current tasks:
     - Add prologue sequence with placeholder graphics from Hillary.
 
+    - Fix default screen size
+
     - Higher priority stretch goals
         - Update boss
             - New roof design
@@ -112,15 +114,17 @@ Current tasks:
                     - The player must teleport to the spirit world to clear the cloud.
                     - The beast can attack the player with lightning bolts while they are in the spirit world, if it is not regenerating.
         - Orb enemies create lightning bolt + radial shockwave attack in alternate world during blast.
-        - Cosmetic: hero appears on top of doorframe whene exiting
-            Remove the "doorTop" as a separate component.
-            If the hero is using the door, set the door as the renderParent, and then render the door top after them.
         - Improve midboss:
             - Do something more aggressive during pinch phase
                 - Growing AoE lightning ring
                 - Shock arcs centered on player every 1s
                 - Make sure player can knock the orb away with attacks
                     - Accelerate towards the player faster requiring knockback or fast speed to escape
+            - Middle platform should block ground sparks
+            - Sparks shuold glow in the dark
+            - Add third orb.
+            - Make spinning orbs vulnerable to ice.
+
 
     - Low priority Staff Tower Exterior
         - Cosmetic: shadow is hidden by tower balcony
@@ -133,8 +137,6 @@ Current tasks:
             - Render the cloud using a solid -> transparent gradient over the top 40 pixels so the cloud fades out
 
     - Low priority Staff Tower changes
-        - Add elevator behaviors
-            - off, terminals are not animated/functional
         - Improve elevator fall sequence:
             - Make elevator platfrom glow so we can see it fall in the basement ahead of the player.
             - Start it off screen
@@ -144,6 +146,8 @@ Current tasks:
             - Like the escalator style with rails except no moving floor.
         - New ladders
         - east/west doors
+        - Add elevator behaviors
+            - off, terminals are not animated/functional
 
     - Improve Test State
         - Add a "test" save slot.
