Update remaining staff tower exterior locations.

--- a/documentation/TODO.txt
+++ b/documentation/TODO.txt
@@ -96,10 +96,13 @@ RangeError: Maximum call stack size exceeded
 Current tasks:
     - Add prologue sequence with placeholder graphics from Hillary.
 
-    - Update all tower exteriors. Replace screen terminal with stone tablet terminal.
-        - Add tower setup behavior to the stone tablet instead of using the staff.
-        - Make sure tower setup behavior is correct
-        - Stone terminal should be hidden when the tower is off.
+    - Animate tower deployment:
+        - Miniature tower flies up from the player off screen.
+        - Full sized tower falls from off screen and lands with a large sound effect and screen shake.
+    - Animate collapsing tower:
+        - Shrink down to 8px wide and animate towards the player.
+        - Play the item get sequence.
+
     - Teleportation to reach the final boss requires too much precision, the walls should be thinner
         - The north wall should only be half solid, we can fix this by adding a new tile instead of using composite tiles.
 
